--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -7,15 +7,50 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ folder }}</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-content>
+    <ion-list>
+      <ion-list-header lines="none" mode="ios">
+        <ion-label>Account</ion-label>
+      </ion-list-header>
+        <ion-item button="true">
+          Option 1
+          <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
+        </ion-item>
 
-  <div id="container">
-    <strong class="capitalize">{{ folder }}</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+        <ion-item>
+          Option 2
+          <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
+        </ion-item>
+
+        <ion-item>
+          Option 3
+          <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
+        </ion-item>
+
+        <ion-item>
+          Option 4
+          <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
+        </ion-item>
+
+        <ion-item>
+          Option 5
+          <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
+        </ion-item>
+
+        <ion-item>
+          Option 6
+          <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
+        </ion-item>
+
+        <ion-item>
+          Option 7
+          <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
+        </ion-item>
+
+        <ion-item>
+          Option 8
+          <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
+        </ion-item>
+    </ion-list>
+  </ion-content>
