--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,66 @@
 <ion-app>
-  <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" type="overlay">
-      <ion-content>
-        <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi@ionicframework.com</ion-note>
+  <ion-menu side="start" contentId="content" menuId="menu">
+    <ion-header>
+      <ion-toolbar color="primary">
+        <ion-title>Instellingen</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content id="content">
+      <ion-list>
+        <ion-list-header lines="none" mode="ios">
+          <ion-label>Account</ion-label>
+        </ion-list-header>
+        <ion-item button="true">
+          Option 1
+          <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
+        </ion-item>
 
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
-              <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-              <ion-label>{{ p.title }}</ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
+        <ion-item>
+          Option 2
+          <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
+        </ion-item>
 
-        <ion-list id="labels-list">
-          <ion-list-header>Labels</ion-list-header>
+        <ion-item>
+          Option 3
+          <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
+        </ion-item>
 
-          <ion-item *ngFor="let label of labels" lines="none">
-            <ion-icon slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
-            <ion-label>{{ label }}</ion-label>
-          </ion-item>
-        </ion-list>
-      </ion-content>
-    </ion-menu>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
-  </ion-split-pane>
+        <ion-item>
+          Option 4
+          <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
+        </ion-item>
+
+        <ion-item>
+          Option 5
+          <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
+        </ion-item>
+
+        <ion-item>
+          Option 6
+          <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
+        </ion-item>
+
+        <ion-item>
+          Option 7
+          <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
+        </ion-item>
+
+        <ion-item>
+          Option 8
+          <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+    <ion-footer>
+      <ion-toolbar>
+        <ion-title>
+            Uitloggen
+        </ion-title>
+        <ion-buttons slot="end">
+          <ion-button fill="clear"><ion-icon name="exit-outline"></ion-icon></ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-footer>
+  </ion-menu>
+  <ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
