Add clicky function

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,42 +10,42 @@
         <ion-list-header lines="none" mode="ios">
           <ion-label>Account</ion-label>
         </ion-list-header>
-        <ion-item button="true">
+        <ion-item button="true" (click)="clicky()">
           Option 1
           <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
         </ion-item>
 
-        <ion-item>
+        <ion-item (click)="clicky()">
           Option 2
           <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
         </ion-item>
 
-        <ion-item>
+        <ion-item (click)="clicky()">
           Option 3
           <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
         </ion-item>
 
-        <ion-item>
+        <ion-item (click)="clicky()">
           Option 4
           <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
         </ion-item>
 
-        <ion-item>
+        <ion-item (click)="clicky()">
           Option 5
           <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
         </ion-item>
 
-        <ion-item>
+        <ion-item (click)="clicky()">
           Option 6
           <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
         </ion-item>
 
-        <ion-item>
+        <ion-item (click)="clicky()">
           Option 7
           <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
         </ion-item>
 
-        <ion-item>
+        <ion-item (click)="clicky()">
           Option 8
           <ion-button fill="clear" slot="end"><ion-icon name="play"></ion-icon></ion-button>
         </ion-item>
