Change content to main-content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <ion-app>
-  <ion-menu side="start" contentId="content" menuId="menu">
+  <ion-menu side="start" contentId="main-content" menuId="menu">
     <ion-header>
       <ion-toolbar color="primary">
         <ion-title>Instellingen</ion-title>
       </ion-toolbar>
     </ion-header>
-    <ion-content id="content">
+    <ion-content id="main-content">
       <ion-list>
         <ion-list-header lines="none" mode="ios">
           <ion-label>Account</ion-label>
